--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -86,7 +86,7 @@ objects:
         # fetch the oc binary so we can talk to the cluster.  
         export PATH=$PATH:/tmp/shared/bin
         mkdir /tmp/shared/bin
-        curl https://storage.googleapis.com/origin-ci-test/_tools/4.1.0/oc >/tmp/shared/bin/oc 2>/dev/null
+        curl https://mirror.openshift.com/pub/openshift-v4/clients/oc/4.3/linux/oc.tar.gz | tar xvzf - -C /tmp/shared/bin/ oc
         chmod ug+x /tmp/shared/bin/oc
 
         # setup the persisted metadata.json and kubeconfig files that 
