Test image ... will set

--- a/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
@@ -339,7 +339,7 @@ presubmits:
             configMapKeyRef:
               key: integr8ly-heimdall-master.yaml
               name: ci-operator-master-configs
-        image: ci-operator:latest
+        image: registry.svc.ci.openshift.org/hongkliu-test/pipeline:ci-operator
         imagePullPolicy: Always
         name: ""
         resources:
