--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1291,6 +1291,7 @@ objects:
 
             # we need to install openstack client and other requirements
             echo "OpenStack: installing requirements"
+            export UPI_DIR="${INSTALLER_SOURCE_PATH}/upi/${CLUSTER_TYPE}"
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
