--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -305,7 +305,7 @@ objects:
 
     # Runs an install
     - name: setup
-      image: ${IMAGE_OPENSTACK_INSTALLER}
+      image: ${IMAGE_UPI_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       volumeMounts:
       - name: shared-tmp
