--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -366,7 +366,7 @@ objects:
       - name: INSTALL_INITIAL_RELEASE
       - name: RELEASE_IMAGE_INITIAL
       - name: UPI_DIR
-        value: /go/src/github.com/openshift/installer/upi/${CLUSTER_TYPE}
+        value: /var/lib/openshift-install/upi/${CLUSTER_TYPE}
 
       command:
       - /bin/sh
@@ -2299,7 +2299,7 @@ objects:
         value: '/tmp/cluster-profile/clouds.yaml'
       - name: INSTALLER_SOURCE_PATH
       - name: UPI_DIR
-        value: /go/src/github.com/openshift/installer/upi/${CLUSTER_TYPE}
+        value: /var/lib/openshift-install/upi/${CLUSTER_TYPE}
       command:
       - /bin/bash
       - -c
