Cincinnati: update secrets mapping to ensure secret names match

--- a/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
@@ -73,7 +73,7 @@ secrets:
     name: ci-pull-credentials
 - from:
     namespace: cincinnati-ci
-    name: quay
+    name: cincinnati-secrets-quay
   to:
     namespace: ci
     name: cincinnati-secrets-quay
