--- a/ci-operator/config/openshift/console/openshift-console-release-4.5.yaml
+++ b/ci-operator/config/openshift/console/openshift-console-release-4.5.yaml
@@ -4,6 +4,11 @@ base_images:
     name: "4.5"
     namespace: ocp
     tag: base
+  shellcheck:
+    cluster: https://api.ci.openshift.org
+    name: shellcheck
+    namespace: ci
+    tag: stable
 build_root:
   image_stream_tag:
     cluster: https://api.ci.openshift.org
@@ -24,6 +29,15 @@ promotion:
   disabled: true
   name: "4.5"
   namespace: ocp
+raw_steps:
+- source_step:
+    clonerefs_image:
+      name: clonerefs
+      namespace: ci
+      tag: latest
+    clonerefs_path: /app/prow/cmd/clonerefs/app.binary.runfiles/io_k8s_test_infra/prow/cmd/clonerefs/linux_amd64_pure_stripped/app.binary
+    from: shellcheck
+    to: shellcheck-src
 resources:
   '*':
     limits: {}
@@ -76,3 +90,7 @@ tests:
   commands: ./test-prow-e2e.sh
   openshift_installer_src:
     cluster_profile: gcp
+- as: verify
+  commands: ./shellcheck.sh
+  container:
+    from: shellcheck-src
