Rename cluster type checks from metal to packet

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -274,7 +274,7 @@ objects:
           export KUBE_SSH_USER=core
         elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
           export TEST_PROVIDER='azure'
-        elif [ "${CLUSTER_TYPE}" == "metal" ] ; then
+        elif [ "${CLUSTER_TYPE}" == "packet" ] ; then
           export HOME=/tmp/shared/nss_wrapper
           export NSS_WRAPPER_PASSWD=$HOME/passwd NSS_WRAPPER_GROUP=$HOME/group NSS_USERNAME=nsswrapper NSS_GROUPNAME=nsswrapper LD_PRELOAD=/tmp/shared/libnss_wrapper.so
           export IP=$(cat /tmp/shared/packet-server-ip)
@@ -426,7 +426,7 @@ objects:
         set -euo pipefail
 
         # setup/teardown is different for servers on packet.net (see setup-packet)
-        if [ "${CLUSTER_TYPE}" == "metal" ] ; then
+        if [ "${CLUSTER_TYPE}" == "packet" ] ; then
             exit 0
         fi
 
@@ -824,7 +824,7 @@ objects:
         set -eo pipefail
 
         # setup/teardown is different for servers on packet.net (see setup-packet)
-        if [ "${CLUSTER_TYPE}" == "metal" ] ; then
+        if [ "${CLUSTER_TYPE}" == "packet" ] ; then
             exit 0
         fi
 
@@ -1000,7 +1000,7 @@ objects:
         #!/bin/sh
         set -exo pipefail
 
-        if [ "${CLUSTER_TYPE}" != "metal" ] ; then
+        if [ "${CLUSTER_TYPE}" != "packet" ] ; then
             exit 0
         fi
 
