Update config for test-infra 568537eed4d3

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -379,6 +379,7 @@ plank:
   max_goroutines: 20
   pod_pending_timeout: 24h0m0s
   pod_running_timeout: 48h0m0s
+  pod_unscheduled_timeout: 24h0m0s
   report_template: '[Full PR test history](https://prow.svc.ci.openshift.org/pr-history?org={{.Spec.Refs.Org}}&repo={{.Spec.Refs.Repo}}&pr={{with
     index .Spec.Refs.Pulls 0}}{{.Number}}{{end}}). [Your PR dashboard](https://prow.svc.ci.openshift.org/pr?query=is:pr+state:open+author:{{with
     index .Spec.Refs.Pulls 0}}{{.Author}}{{end}}). Please help us cut down on flakes
@@ -394,6 +395,7 @@ sinker:
   max_pod_age: 6h0m0s
   max_prowjob_age: 24h0m0s
   resync_period: 5m0s
+  terminated_pod_ttl: 6h0m0s
 status_error_link: https://github.com/kubernetes/test-infra/issues
 tide:
   blocker_label: tide/merge-blocker
