Add port 443 to bastion

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -14,12 +14,15 @@ items:
       app: prow
       component: sshd
     ports:
+    - name: osh-app
+      port: 443
+      targetPort: osh-app
     - name: ost-auth
       port: 5000
       targetPort: ost-auth
-    - name: osh-api
+    - name: osh-lb
       port: 6443
-      targetPort: osh-api
+      targetPort: osh-lb
     - name: ost-nova
       port: 8774
       targetPort: ost-nova
@@ -75,7 +78,7 @@ items:
               containerPort: 2222
             - name: ost-auth
               containerPort: 3333
-            - name: osh-api
+            - name: osh-lb
               containerPort: 4444
             - name: ost-nova
               containerPort: 5555
@@ -89,6 +92,8 @@ items:
               containerPort: 8888
             - name: ost-neutron
               containerPort: 9999
+            - name: osh-api
+              containerPort: 11000
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
