--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1287,7 +1287,10 @@ objects:
             echo "OpenStack: installing requirements"
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
+            echo "OpenStack: installing pip.
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            echo "Openstack: upgrading pip and setup tools
+            pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
             which ansible-playbook
 
@@ -2332,6 +2335,18 @@ objects:
           mkdir -p /tmp/artifacts/pods /tmp/artifacts/nodes /tmp/artifacts/metrics /tmp/artifacts/bootstrap /tmp/artifacts/network
 
           if [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
+
+            # we need to install openstack client and other requirements
+            echo "OpenStack: installing requirements"
+            cat ${UPI_DIR}/requirements.txt
+            export PATH="${HOME}/.local/bin:${PATH}"
+            echo "OpenStack: installing pip.
+            easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            echo "Openstack: upgrading pip and setup tools
+            pip install --user --upgrade pip setuptools
+            pip install --user -r ${UPI_DIR}/requirements.txt
+            which ansible-playbook
+
             # We have to truncate cluster name to 14 chars, because there is a limitation in the install-config
             # Now it looks like "ci-op-rl6z646h-65230".
             # We will remove "ci-op-" prefix from there to keep just last 14 characters.
