looking for pip path

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1287,8 +1287,10 @@ objects:
             echo "OpenStack: installing requirements"
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
+            echo $PATH
             echo "OpenStack: installing pip.
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            ls .local/bin
             echo "Openstack: upgrading pip and setup tools
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
@@ -2340,8 +2342,10 @@ objects:
             echo "OpenStack: installing requirements"
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
+            echo $PATH
             echo "OpenStack: installing pip.
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
+            ls .local/bin
             echo "Openstack: upgrading pip and setup tools
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
