--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1233,9 +1233,8 @@ objects:
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
             echo $PATH
-            echo "OpenStack: installing pip.
+            echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            ls .local/bin
             echo "Openstack: upgrading pip and setup tools
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
@@ -2137,9 +2136,8 @@ objects:
             cat ${UPI_DIR}/requirements.txt
             export PATH="${HOME}/.local/bin:${PATH}"
             echo $PATH
-            echo "OpenStack: installing pip.
+            echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            ls .local/bin
             echo "Openstack: upgrading pip and setup tools
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
