Correct missing quote

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1290,7 +1290,7 @@ objects:
             echo $PATH
             echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools
+            echo "Openstack: upgrading pip and setup tools"
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
             which ansible-playbook
@@ -2344,7 +2344,7 @@ objects:
             echo $PATH
             echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools
+            echo "Openstack: upgrading pip and setup tools"
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
             which ansible-playbook
