Correct missing quote

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1235,7 +1235,7 @@ objects:
             echo $PATH
             echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools
+            echo "Openstack: upgrading pip and setup tools"
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
             which ansible-playbook
@@ -2138,7 +2138,7 @@ objects:
             echo $PATH
             echo "OpenStack: installing pip"
             easy_install --user pip  # our Python 2.7.5 is even too old for ensurepip
-            echo "Openstack: upgrading pip and setup tools
+            echo "Openstack: upgrading pip and setup tools"
             pip install --user --upgrade pip setuptools
             pip install --user -r ${UPI_DIR}/requirements.txt
             which ansible-playbook
